fix avatar size. try to collapse menu item but it should be done with bootstrap.

--- a/src/sass/menu.sass
+++ b/src/sass/menu.sass
@@ -34,7 +34,7 @@
     border-left: 1px solid #a01
     border-right: 1px solid #a01
     background: #c02030
-
-@media (max-width: 768px)
-  #menu .item
-    display: none
+  .avatar
+    margin-right: 5px
+    width: 24px
+    height: 24px
